# initia-votemarket

./: .gitignore  README.md
.initia/: submission.json
agent/: .env.example  package.json  tsconfig.json
agent/src/: contracts.ts  index.ts  logger.ts  optimizer.ts  wallet.ts
artifacts/: bribe_vault.wasm  checksums.txt  epoch_controller.wasm  vote_registry.wasm
contracts/: Cargo.toml
contracts/bribe-vault/: Cargo.toml
contracts/bribe-vault/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/epoch-controller/: Cargo.toml
contracts/epoch-controller/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/vote-registry/: Cargo.toml
contracts/vote-registry/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
deploy/: Dockerfile  autolaunch.expect  docker-compose.yml  entrypoint.sh  launch.ps1  launch.sh  package-lock.json  package.json  rollup-config.template.json
deploy/scripts/: advance_epoch.mjs  create_epoch.mjs  deploy_contracts.mjs  deposit_bribe.mjs  gen-wallets.mjs
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/scripts/: patch-ik.js
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: AgentPanel.tsx  BribeBoard.tsx  ClaimPanel.tsx  ConnectButton.tsx  UserPanel.tsx
frontend/src/hooks/: useBribeOffers.ts  useCurrentEpoch.ts  useSessionKey.ts  useUserReward.ts  useVipScore.ts
frontend/src/lib/: tx.ts
optimizer-workspace/: Cargo.toml
