[workspace]
members = [
    "contracts/epoch-controller",
    "contracts/bribe-vault",
    "contracts/vote-registry",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
cosmwasm-std = { version = "1.5", features = ["stargate"] }
cosmwasm-schema = "1.3"
cw-storage-plus = "1.2"
cw2 = "1.1"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"

# Force older base64ct (newer versions require edition2024 unsupported by Rust 1.75)
base64ct = "=1.6.0"
